--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "eog-web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prestart": "eslint . --ext .ts",
+    "build": "webpack --config webpack.config.ts",
     "start": "webpack serve --config webpack.config.ts"
   },
   "license": "MIT",
